fixed some margin spacing erros

--- a/Projects/project_2/actual_project/style.css
+++ b/Projects/project_2/actual_project/style.css
@@ -39,7 +39,7 @@ body {
   h2{
     font-size: 30px;
     font-weight: 450px;
-    color: #333;
+    color: #431650;
     line-height: normal;
 
   }
@@ -112,6 +112,10 @@ body {
     padding: 0;
   }
 
+  #locations-hours p{
+    color: #333;
+  }
+
 /*------------------Hero home image section----------------------*/
   .hero_home {
     position: relative;
@@ -150,17 +154,14 @@ body {
 
   #cafe-photo {
     width:100%;
+    margin-left: 5%;
   }
 
   #cafe-info {
     padding: 20px;
     padding-top:150px;
     padding-left: 70px;
-   /*flex:1*/ 
-  }
-
-  h2 {
-    color: #333;
+  /*flex:1*/ 
   }
 
   #reserve-button {
@@ -190,6 +191,7 @@ body {
     #text-block {
       text-align: center;
       padding: 230px 60px;
+      padding-top: 15%;
     }
 
     #photo {
